--- a/Ramadhan-Mubarak-master/assets/css/style.css
+++ b/Ramadhan-Mubarak-master/assets/css/style.css
@@ -46,8 +46,8 @@ section h2 {
 section h3 {
     position: relative;
     text-align: center;
-    font-size: 80px;
-    color: #fff;
+    font-size: 50px;
+    color: #0b0000;
     text-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
